feat: Build user architecture - User Architecture - User Model with ddl
